<resources>
    <string name="app_name" translatable="false">Neoland2021</string>
    <string name="introduce_tu_email">Enter your email</string>
    <string name="neoland" translatable="false">NEOLAND</string>
    <string name="login">Login</string>
    <string name="recordar_usuario">Remember me?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="students">Students</string>
    <string name="campus">Campus</string>
</resources>