<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/email"
        android:hint="@string/introduce_tu_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text_person_name" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_text_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/name"
        android:hint="@string/introduce_tu_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar Foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />

    <Button
        android:id="@+id/b_save_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_picture" />

    <ImageView
        android:id="@+id/iv_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_address"
        tools:src="@mipmap/chico" />

</androidx.constraintlayout.widget.ConstraintLayout>